--- a/biz/ants-web/pom.xml
+++ b/biz/ants-web/pom.xml
@@ -6,20 +6,19 @@
 	<parent>
 		<groupId>com.ants</groupId>
 		<artifactId>ants-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
+		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>ants-web</artifactId>
 	<name>ants-web</name>
-	<url>http://maven.apache.org</url>
+	<url>http://smatiger.com</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	</dependencies>
 </project>
