--- a/tools/ants-auto-coder/pom.xml
+++ b/tools/ants-auto-coder/pom.xml
@@ -9,18 +9,17 @@
 		<version>1.0.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<artifactId>ants-biz</artifactId>
-	<name>ants-biz</name>
+	<artifactId>ants-auto-coder</artifactId>
+	<name>ants-auto-coder</name>
+	<packaging>jar</packaging>
 	<url>http://smatiger.com</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>fastjson</artifactId>
 		</dependency>
 	</dependencies>
 </project>
